updated mobile homepage hero section description and fixed overlap

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -31,6 +31,10 @@
   justify-content: space-between;
 }
 
+#mobile-hero-text {
+  display: none;
+}
+
 
 .hero-container h1{
   font-family: moonFont;
@@ -213,21 +217,34 @@ h3{
   .hero-container.home-page{
     background-image: url(../img/keycapTest.jpg);
     /*background-color: pink;*/
-    height: 100vh;
+    height: 110vh;
     background-position: top;
     background-repeat: no-repeat;
     background-size: 100%;
 
   }
 
+
   .hero-container .content {
     grid-column: 3 / span 8;
 
-    grid-row: 2 / span 4;
+    grid-row: 4 / span 4;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+
+  .homepage-header {
+    padding-bottom: 0;
+  }
+
+  #mobile-hero-text {
+    display: flex;
+  }
+
+  #desktop-hero-text {
+    display: none;
   }
 
   .hero-container .content p, .about-us p{
